kubernetes/hcal/ingress/ingress-auth.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-auth
  namespace: auth
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: cms-mondb.cern.ch
    http:
      paths:
      - path: /
        backend:
          serviceName: auth-proxy-server
          servicePort: 443
  tls:
  - hosts:
    - cms-mondb.cern.ch
